# django-db-adapter

./: .editorconfig  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  main.yml  python-package.yml  test.yml
db_adapter/: __init__.py  apps.py  models.py  name_builders.py  settings.py  utils.py
db_adapter/config/: settings.py
db_adapter/db/backends/base/: operations.py  schema.py
db_adapter/db/backends/oracle/: base.py  constants.py  operations.py  schema.py
db_editor/: apps.py  models.py
db_editor/config/: settings.py
db_editor/db/backends/oracle/: operations.py  schema.py
db_editor/management/commands/: sqlmigrateall.py
django_db_editor/: models.py
django_db_editor/db/backends/oracle/: operations.py  schema.py  utils.py
django_db_editor/utils/: string.py
requirements/: requirements-codestyle.txt  requirements-install-requires.txt  requirements-install.txt  requirements-optional.txt  requirements-testing.txt
tests/: conftest.py  connection.py  models.py  test_models.py  test_name_builders.py  test_settings.py  test_utils.py
tests/test_backends/test_base/: test_operations.py  test_schema.py
