[metadata]
name=django-db-adapter
version=1.0.2
url=https://github.com/weynelucas/django-db-adapter/
author=Lucas Weyne
author_email=weynelucas@gmail.com
description=A configurable database backend for Oracle
long_description=file: README.md
long_description_content_type=text/markdown
download_url=https://github.com/weynelucas/django-db-adapter/archive/1.0.2.tar.gz
keywords=django database schema editor oracle django-db-adapter
classifiers=
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    parse>= 1.19

[flake8]
exclude =
    build,
    .git,
    .tox,
    .env,
ignore =
    E203,
    E266,
    W503,
    W504,
    W601
per-file-ignores =
    **/tests/*:E501
max-line-length = 80

[isort]
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 80
indent = 4
atomic = true
default_section = THIRDPARTY
known_first_party = db_adapter
known_django = django
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
console_output_style = classic
